2023-07-21 version 2023b
- New command "kdplot": simple access to a kernel density plot
  for a single series
- New function typename(): return a string giving the type of
  the argument (can replace typeof() and typestr())
- "arima" command: implement built-in procedure for assessing
  lag orders, via new --lagselect option, and add GUI access
- "corr" command: add 1 percent critical value of correlation
  coefficient to the output
- "join" command: import descriptions of newly-added series,
  if present
- "gnuplot" command: add new options --inbuf and --outbuf to
  accept, respectively, input from a named string and output
  to a named string
- "smpl" command with the panel-data --time option: support
  the --replace modifier
- "outfile" command: insist on correct syntax for usage with
  the --tempfile option
- aggregate() function: support matrix input
- misszero() and zeromiss() functions: support matrix input
- SVAR addon: implement mixed (set-based and zero) restrictions
- geoplot addon: make the plot key position configurable
- regls addon: add an mregls() function for working with data
  in matrix form
- Add optional boolean "skip_na" argument for several matrix
  functions that compute statistics
- Functions bkfilt, bwfilt, fracdiff, filter: disallow panel
  data since these functions assume regular time-series data
- Boxplots: respect the chosen gnuplot theme, if applicable
- Add "empty" as a dummy constant for initializing an empty
  string, matrix, bundle or array
- "numeric" meta-type: allow usage in function packages, and
  hook it up for syntax highlighting
- Function packages: support use of Markdown for help text
- Function packages: add a new special function role named
  "ui-maker" to support customization of the user interface
- "R_functions" facility: handle row and column names when
  passing matrices to and from R
- Fix bug: failure in the Kalman function ksmooth() when in
  "univariate" mode and the observable has more elements than